--- a/menu.html
+++ b/menu.html
@@ -134,16 +134,16 @@
                         <h2 class="text-anime-style-2" data-cursor="-opaque">our special <span>menu</span></h2>
                         <div class="menu-legend wow fadeInUp" data-wow-delay="0.2s">
                             <div class="legend-item">
-                                <span class="food-badge badge-vegan">🥬</span>
-                                <span class="legend-text">Vegan</span>
-                            </div>
-                            <div class="legend-item">
-                                <span class="food-badge badge-vegetarian">🍃</span>
-                                <span class="legend-text">Vegetarian</span>
+                                <span class="food-badge badge-vegetarian">🥬</span>
+                                <span class="legend-text">Vegetarian Friendly</span>
                             </div>
                             <div class="legend-item">
                                 <span class="food-badge badge-chesse">🧀</span>
-                                <span class="legend-text">Cheese</span>
+                                <span class="legend-text">Contains milk and dairy products</span>
+                            </div>
+                                <div class="legend-item">
+                                <span class="food-badge badge-spicy">🌶️</span>
+                                <span class="legend-text">Spicy dish</span>
                             </div>
                         </div>
                     </div>
@@ -214,7 +214,7 @@
         <div class="menu-item-title">
             <h3>Spicy peppers</h3>
             <div class="legend-item">
-                <span class="food-badge badge-vegetarian">🍃</span>
+                <span class="food-badge badge-vegetarian">🥬</span>
             </div>
             <hr>
             <span>€1,90</span>
@@ -241,7 +241,7 @@
         <div class="menu-item-title">
             <h3>Grilled feta</h3>
             <div class="legend-item">
-                <span class="food-badge badge-vegetarian">🍃</span>
+                <span class="food-badge badge-vegetarian">🥬</span>
                 <span class="food-badge badge-chesse">🧀</span>
             </div>
             <hr>
@@ -263,7 +263,7 @@
         <div class="menu-item-title">
             <h3>Feta cheese</h3>
                                         <div class="legend-item"> 
-                                 <span class="food-badge badge-vegetarian">🍃</span>
+                                 <span class="food-badge badge-vegetarian">🥬</span>
                                                  <span class="food-badge badge-chesse">🧀</span>
 
                              </div>
@@ -286,7 +286,7 @@
         <div class="menu-item-title">
             <h3>Cheese fritters</h3>
                                         <div class="legend-item"> 
-                                 <span class="food-badge badge-vegetarian">🍃</span>
+                                 <span class="food-badge badge-vegetarian">🥬</span>
                              </div>
             <hr>
             <span>€5,50</span>
@@ -307,8 +307,7 @@
         <div class="menu-item-title">
             <h3>Fried potatoes</h3>
                             <div class="legend-item"> 
-                                 <span class="food-badge badge-vegan">🥬</span> 
-                                 <span class="food-badge badge-vegetarian">🍃</span>
+                                 <span class="food-badge badge-vegetarian">🥬</span>
                              </div>
             <hr>
             <span>€5,00</span>
@@ -329,7 +328,7 @@
         <div class="menu-item-title">
             <h3>Halloumi cheese</h3>
             <div class="legend-item">
-                <span class="food-badge badge-vegetarian">🍃</span>
+                <span class="food-badge badge-vegetarian">🥬</span>
             </div>
             <hr>
             <span>€6,00</span>
@@ -350,7 +349,7 @@
         <div class="menu-item-title">
             <h3>Talagani cheese</h3>
             <div class="legend-item">
-                <span class="food-badge badge-vegetarian">🍃</span>
+                <span class="food-badge badge-vegetarian">🥬</span>
             </div>
             <hr>
             <span>€6,00</span>
@@ -370,7 +369,7 @@
         <div class="menu-item-title">
             <h3>Kefalotyri Saganaki</h3>
             <div class="legend-item">
-                <span class="food-badge badge-vegetarian">🍃</span>
+                <span class="food-badge badge-vegetarian">🥬</span>
             </div>
             <hr>
             <span>€6,00</span>
@@ -391,8 +390,7 @@
         <div class="menu-item-title">
             <h3>Fried Courgettes</h3>
             <div class="legend-item">
-                <span class="food-badge badge-vegetarian">🍃</span>
-                <span class="food-badge badge-vegan">🥬</span>
+                <span class="food-badge badge-vegetarian">🥬</span>
             </div>
             <hr>
             <span>€5,00</span>
@@ -431,7 +429,7 @@
         <div class="menu-item-title">
             <h3>Roast Stuffed Aubergine</h3>
             <div class="legend-item">
-                <span class="food-badge badge-vegetarian">🍃</span>
+                <span class="food-badge badge-vegetarian">🥬</span>
             </div>
             <hr>
             <span>€6,50</span>
@@ -452,7 +450,7 @@
         <div class="menu-item-title">
             <h3>Stuffed Potato</h3>
             <div class="legend-item">
-                <span class="food-badge badge-vegetarian">🍃</span>
+                <span class="food-badge badge-vegetarian">🥬</span>
             </div>
             <hr>
             <span>€6,50</span>
@@ -473,8 +471,8 @@
         <div class="menu-item-title">
             <h3>Grilled Mushrooms</h3>
             <div class="legend-item">
-                <span class="food-badge badge-vegetarian">🍃</span>
-                <span class="food-badge badge-vegan">🥬</span>
+                <span class="food-badge badge-vegetarian">🥬</span>
+                
             </div>
             <hr>
             <span>€6,00</span>
@@ -495,7 +493,7 @@
         <div class="menu-item-title">
             <h3>Stuffed Mushrooms</h3>
             <div class="legend-item">
-                <span class="food-badge badge-vegetarian">🍃</span>
+                <span class="food-badge badge-vegetarian">🥬</span>
             </div>
             <hr>
             <span>€6,50</span>
@@ -516,7 +514,9 @@
         <div class="menu-item-title">
             <h3>Buyurdi</h3>
             <div class="legend-item">
-                <span class="food-badge badge-vegetarian">🍃</span>
+                <span class="food-badge badge-vegetarian">🥬</span>
+                <span class="food-badge badge-chesse">🧀</span>
+                <span class="food-badge badge-spicy">🌶️</span>
             </div>
             <hr>
             <span>€6,00</span>
@@ -537,7 +537,7 @@
         <div class="menu-item-title">
             <h3>Bruschetta</h3>
             <div class="legend-item">
-                <span class="food-badge badge-vegetarian">🍃</span>
+                <span class="food-badge badge-vegetarian">🥬</span>
             </div>
             <hr>
             <span>€5,50</span>
@@ -558,8 +558,8 @@
         <div class="menu-item-title">
             <h3>Zucchini Patties</h3>
             <div class="legend-item">
-                <span class="food-badge badge-vegetarian">🍃</span>
-                <span class="food-badge badge-vegan">🥬</span>
+                <span class="food-badge badge-vegetarian">🥬</span>
+               
             </div>
             <hr>
             <span>€6,00</span>
@@ -580,8 +580,7 @@
         <div class="menu-item-title">
             <h3>Stuffed Vine Leaves</h3>
             <div class="legend-item">
-                <span class="food-badge badge-vegetarian">🍃</span>
-                <span class="food-badge badge-vegan">🥬</span>
+                <span class="food-badge badge-vegetarian">🥬</span>
             </div>
             <hr>
             <span>€6,00</span>
@@ -602,7 +601,7 @@
         <div class="menu-item-title">
             <h3>Feta with Phyllo Crust</h3>
             <div class="legend-item">
-                <span class="food-badge badge-vegetarian">🍃</span>
+                <span class="food-badge badge-vegetarian">🥬</span>
             </div>
             <hr>
             <span>€6,70</span>
@@ -643,7 +642,8 @@
             <div class="menu-item-title">
                 <h3>Tzatziki</h3>
                 <div class="legend-item">
-                    <span class="food-badge badge-vegetarian">🍃</span>
+                    <span class="food-badge badge-vegetarian">🥬</span>
+                    <span class="food-badge badge-chesse">🧀</span>
                 </div>
                 <hr>
                 <span>€5,00</span>
@@ -665,6 +665,10 @@
         <div class="menu-item-body">
             <div class="menu-item-title">
                 <h3>Cheese Salad Spread</h3>
+                <div class="legend-item">
+                    <span class="food-badge badge-vegetarian">🥬</span>
+                    <span class="food-badge badge-chesse">🧀</span>
+                </div>
                 <hr>
                 <span>€4,50</span>
             </div>
@@ -685,6 +689,9 @@
         <div class="menu-item-body">
             <div class="menu-item-title">
                 <h3>Taramosalata</h3>
+                <div class="legend-item">
+                    <span class="food-badge badge-vegetarian">🥬</span>
+                </div>
                 <hr>
                 <span>€4,50</span>
             </div>
@@ -705,6 +712,9 @@
         <div class="menu-item-body">
             <div class="menu-item-title">
                 <h3>Aubergine Spread</h3>
+                <div class="legend-item">
+                    <span class="food-badge badge-vegetarian">🥬</span>
+                </div>
                 <hr>
                 <span>€4,50</span>
             </div>
@@ -855,6 +865,9 @@
         <div class="menu-item-body">
             <div class="menu-item-title">
                 <h3>Cucumber - Tomato Salad</h3>
+                <div class="legend-item">
+                    <span class="food-badge badge-vegetarian">🥬</span>
+                </div>
                 <hr>
                 <span>€6,00</span>
             </div>
@@ -875,6 +888,10 @@
         <div class="menu-item-body">
             <div class="menu-item-title">
                 <h3>Greek Salad</h3>
+                <div class="legend-item">
+                    <span class="food-badge badge-vegetarian">🥬</span>
+                    <span class="food-badge badge-chesse">🧀</span>
+                </div>
                 <hr>
                 <span>€9,80</span>
             </div>
@@ -895,6 +912,10 @@
         <div class="menu-item-body">
             <div class="menu-item-title">
                 <h3>Cretan Dakos</h3>
+                <div class="legend-item">
+                    <span class="food-badge badge-vegetarian">🥬</span>
+                    <span class="food-badge badge-chesse">🧀</span>
+                </div>
                 <hr>
                 <span>€8,50</span>
             </div>
@@ -915,6 +936,10 @@
         <div class="menu-item-body">
             <div class="menu-item-title">
                 <h3>Green Salad</h3>
+                <div class="legend-item">
+                    <span class="food-badge badge-vegetarian">🥬</span>
+                    <span class="food-badge badge-chesse">🧀</span>
+                </div>
                 <hr>
                 <span>€8,50</span>
             </div>
@@ -935,6 +960,9 @@
         <div class="menu-item-body">
             <div class="menu-item-title">
                 <h3>Boiled Greens</h3>
+                <div class="legend-item">
+                    <span class="food-badge badge-vegetarian">🥬</span>
+                </div>
                 <hr>
                 <span>€6,50</span>
             </div>
@@ -955,6 +983,9 @@
         <div class="menu-item-body">
             <div class="menu-item-title">
                 <h3>Liana Salad</h3>
+                <div class="legend-item">
+                    <span class="food-badge badge-vegetarian">🥬</span>
+                </div>
                 <hr>
                 <span>€9,70</span>
             </div>
@@ -1015,6 +1046,10 @@
         <div class="menu-item-body">
             <div class="menu-item-title">
                 <h3>Salad with Manouri Cheese</h3>
+                <div class="legend-item">
+                    <span class="food-badge badge-vegetarian">🥬</span>
+                    <span class="food-badge badge-chesse">🧀</span>
+                </div>
                 <hr>
                 <span>€9,50</span>
             </div>
@@ -1035,6 +1070,9 @@
         <div class="menu-item-body">
             <div class="menu-item-title">
                 <h3>Politiki Salad</h3>
+                <div class="legend-item">
+                    <span class="food-badge badge-vegetarian">🥬</span>
+                </div>
                 <hr>
                 <span>€6,50</span>
             </div>
